--- a/styles/True.module.css
+++ b/styles/True.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 0 2rem;
+  padding: 0 1rem;
 }
 
 .main {
@@ -96,7 +96,7 @@
 }
 
 .card {
-  margin: 1rem;
+  margin: "0 auto";
   padding: 1.5rem;
   text-align: left;
   color: inherit;
@@ -104,7 +104,8 @@
   border: 1px solid #ff7b6f;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 90%;
+  /* max-width: 100%; */
+  width: 90%;
   line-height: 1.5;
 }
 
