--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -82,10 +82,8 @@
 }
 
 .grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   max-width: 800px;
 }
 
@@ -127,7 +125,6 @@
 
 @media (max-width: 600px) {
   .grid {
-    width: 100%;
-    flex-direction: column;
+    grid-template-columns: 1fr;
   }
 }
