--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -71,14 +71,14 @@
 }
 
 .code {
-  background: #c8094c;
-  color: white;
+  color: black;
   font-weight: bold;
   border-radius: 5px;
-  padding: 0.75rem;
+  padding: 0.35rem;
   font-size: 1.1rem;
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
+  transition: all 0.8s;
 }
 
 .grid {
@@ -93,18 +93,17 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #ff7b6f;
+  outline: 1px solid #ff7b6f;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+  transition: all 0.15s ease;
   max-width: 300px;
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-  color: white;
-  border-color: #c8094c;
-  background-color: #c8094c;
+  outline: 4px solid #c8094c;
+  transform: scale(1.05);
 }
 
 .card h2 {
