--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -93,16 +93,27 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  outline: 1px solid #ff7b6f;
+  /* outline: 1px solid #ff7b6f; */
   border-radius: 10px;
   transition: all 0.15s ease;
   max-width: 300px;
+  box-shadow: 0.5px 0.2px 1.2px rgba(255, 54, 27, 0.015),
+    1px 0.5px 2.7px rgba(255, 54, 27, 0.022),
+    1.7px 0.9px 4.6px rgba(255, 54, 27, 0.027),
+    2.6px 1.4px 6.9px rgba(255, 54, 27, 0.031),
+    3.8px 2px 10px rgba(255, 54, 27, 0.035),
+    5.3px 2.8px 14.2px rgba(255, 54, 27, 0.039),
+    7.5px 4px 20.1px rgba(255, 54, 27, 0.043),
+    11px 5.8px 29.2px rgba(255, 54, 27, 0.048),
+    16.9px 9px 45px rgba(255, 54, 27, 0.055),
+    30px 16px 80px rgba(255, 54, 27, 0.07);
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-  outline: 4px solid #c8094c;
+  box-shadow: 6px 9px 15px #c8094c;
+
   transform: scale(1.05);
 }
 
