--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -88,6 +88,7 @@
 }
 
 .card {
+  position: relative;
   margin: 1rem;
   padding: 1.5rem;
   text-align: left;
@@ -137,4 +138,11 @@
   .grid {
     grid-template-columns: 1fr;
   }
+}
+
+.unseenItem {
+  font-size: 50px;
+  position: absolute;
+  top: 10px;
+  right: 4px;
 }
