--- a/styles/True.module.css
+++ b/styles/True.module.css
@@ -78,6 +78,7 @@
   margin: 4rem 0;
   line-height: 1.5;
   font-size: 2rem;
+  max-width: 80%;
 }
 
 .code {
@@ -154,6 +155,9 @@
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+  .description {
+    max-width: unset;
   }
 }
 
